--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "pocketbase": "^0.8.3",
     "sqlite3": "^5.1.2"
   },
   "devDependencies": {
