--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://eckhoff98.github.io/TaskTracker",
+  "homepage": "https://eckhoff98.github.io/task-tracker",
   "name": "task-tracker",
   "version": "0.1.0",
   "private": true,
